Fix the z-index of the log in dropdown on the map page

--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -367,7 +367,7 @@
 
           &.dropdown-item {
             cursor: pointer;
-            z-index: 1; // On top of the breadcrumbs/section menu
+            z-index: 2; // On top of the breadcrumbs/section menu
             display: block;
             position: relative;
             align-items: center;
